# eva_trajectory_planning

./: README.md
docs/: setup.md
eva_planning/: CMakeLists.txt  package.xml
eva_planning/config/: planning_params.yaml
eva_planning/include/eva_planning/: astar_planner.hpp  cubic_spline_planner.hpp
eva_planning/launch/: eva_planning.launch.py  test_planning.launch.py
eva_planning/scripts/: eva_test_generator.py  planning_monitor.py
eva_planning/src/: astar_planner.cpp  astar_planner.cpp.backup  cubic_spline_planner.cpp  eva_planning_node.cpp
